salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/OSFMX_360ViewInvoice__c.object-meta.xml
<CustomObject>
    <description>Almacena temporalmente registros de la consulta de facturación hacía Denodo y Global Hitss, para mostrar en la vista 360. Debe ser borrada cada noche.</description>
    <label>Factura Vista 360</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas Vista 360</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>