salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_ContractAccountForBilling__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContractAccountForBilling__c</fullName>
    <label>Cuenta Contrato Para Facturacion</label>
    <referenceTo>OSFMX_ContractAccountForBilling__c</referenceTo>
    <relationshipLabel>Facturas Vista 360</relationshipLabel>
    <relationshipName>Facturas_Vista_360</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>