salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_ContratoSuministro__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContratoSuministro__c</fullName>
    <label>Contrato Suministro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>