salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_DescripcionConcepto__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_DescripcionConcepto__c</fullName>
    <label>Descripcion Concepto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>