salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_EstadoFactura__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EstadoFactura__c</fullName>
    <label>Estado Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>