salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_FechaEmision__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FechaEmision__c</fullName>
    <label>Fecha Emision</label>
    <type>Date</type>
</CustomField>