salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_FechaEnvio__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FechaEnvio__c</fullName>
    <label>Fecha Envio</label>
    <type>Date</type>
</CustomField>