salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_FechaFinPeriodoConsumo__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FechaFinPeriodoConsumo__c</fullName>
    <label>Fin Periodo Consumo</label>
    <type>Date</type>
</CustomField>