salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_FechaInicioPeriodoConsumo__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FechaInicioPeriodoConsumo__c</fullName>
    <label>Inicio Periodo Consumo</label>
    <type>Date</type>
</CustomField>