salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_FechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FechaVencimiento__c</fullName>
    <label>Fecha Vencimiento</label>
    <type>Date</type>
</CustomField>