salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_IdDocumento__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IdDocumento__c</fullName>
    <label>Id Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>