salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_IdFactura__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IdFactura__c</fullName>
    <label>Id Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>