salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_ImporteConcepto__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ImporteConcepto__c</fullName>
    <label>Importe Concepto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>