salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_InfoMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_InfoMultipagos__c</fullName>
    <label>Información Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>