salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MonedaCfdi__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MonedaCfdi__c</fullName>
    <label>Moneda del CFDI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>