salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MontoFactura__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MontoFactura__c</fullName>
    <label>Monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>