salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MpAccountMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpAccountMultipagos__c</fullName>
    <label>Id Cliente Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>