salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MpAuthMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpAuthMultipagos__c</fullName>
    <label>Aprobación Bancaria Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>