salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MpCustomernameMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpCustomernameMultipagos__c</fullName>
    <label>Nombre del Usuario Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>