salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MpNodeMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpNodeMultipagos__c</fullName>
    <description>Identificador único de división configurado en Multipagos.</description>
    <label>División organizacional</label>
    <length>10</length>
    <type>Text</type>
</CustomField>