salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MpReferenceMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpReferenceMultipagos__c</fullName>
    <label>Referencia Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>