salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MpSignature__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpSignature__c</fullName>
    <description>Cadena cifrada generada utilizando llave privada proporcionada por Multipagos.</description>
    <label>HASH Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>