salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MpUrlFailureMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpUrlFailureMultipagos__c</fullName>
    <label>URL de Respuesta de Error Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>