salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_MpUrlSuccessMultipagos__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MpUrlSuccessMultipagos__c</fullName>
    <label>URL de Respuesta Exitosa Multipagos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>