salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_NumFactura__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NumFactura__c</fullName>
    <label>Numero de Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>