salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_PeriodoConsumo__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_PeriodoConsumo__c</fullName>
    <label>Período Consumo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>