salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_ReferenciaFactura__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ReferenciaFactura__c</fullName>
    <label>Referencia Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>