salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_TipoDocumento__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_TipoDocumento__c</fullName>
    <label>Tipo Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>