salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_UrlPdf__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_UrlPdf__c</fullName>
    <label>URL PDF</label>
    <type>Url</type>
</CustomField>