salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/fields/OSFMX_UrlZip__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_UrlZip__c</fullName>
    <label>URL Zip</label>
    <type>Url</type>
</CustomField>