salesforce_sfdx/main/default/objects/OSFMX_360ViewInvoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OSFMX_ContractAccountForBilling__c</columns>
    <columns>OSFMX_EstadoFactura__c</columns>
    <columns>OSFMX_FechaEmision__c</columns>
    <columns>OSFMX_DescripcionConcepto__c</columns>
    <columns>OSFMX_ImporteConcepto__c</columns>
    <columns>OSFMX_ContratoSuministro__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>